Bug 455063.  Make sure we don't lose track of our initial containing block. r+sr=roc